--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "listadetarefas",
-    "short_name": "listadetarefas",
+    "name": "todolist",
+    "short_name": "todolist",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
