--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "listadetarefas" "\0"
+            VALUE "FileDescription", "todolist" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "listadetarefas" "\0"
+            VALUE "InternalName", "todolist" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "listadetarefas.exe" "\0"
-            VALUE "ProductName", "listadetarefas" "\0"
+            VALUE "OriginalFilename", "todolist.exe" "\0"
+            VALUE "ProductName", "todolist" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
